--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     <h1>Hola proyecto_equipo-3</h1>
     <p >Prueba GitHub</p>
     <p>Issue 5. Implementar funcionalidad básica B
-    <b>La segunda funcionalidad básica del proyecto según el enunciado proporcionado.</b>
+    <p>La segunda funcionalidad básica del proyecto según el enunciado proporcionado.</p>
 </p>
    
 </body>
